--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
 <head>
+<link rel="stylesheet" href="emails-editor.css" />
 <script type="text/javascript" src="./emails-editor.js"></script>
 <head>
 <body>
-
 <div id="emails-editor"></div>
 <script type="text/javascript">
     const container = document.querySelector('#emails-editor');
-      let options = {};
-      EmailsEditor({container, ...options})
+    let options = {};
+    EmailsEditor({container, ...options})
 </script>
 </body>
-
 </html>
