Added styling to match designs, created right scope for the plugin, general refactoring

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <link rel="stylesheet" href="emails-editor.css" />
 <script type="text/javascript" src="./emails-editor.js"></script>
 <head>
-<body>
+<body style="background-color: rgb(218,230,255);">
 <div id="emails-editor"></div>
+<div id="emails-editor-2"></div>
 <script type="text/javascript">
     const container = document.querySelector('#emails-editor');
+    const container2 = document.querySelector('#emails-editor-2');
     let options = {};
-    EmailsEditor({container, ...options})
+    EmailsEditor({container: container, ...options})
+    EmailsEditor({container: container2, ...options})
 </script>
 </body>
 </html>
