Improved CSS to adjust it to Figma file, changed some naming of variables

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="emails-editor.css" />
 <script type="text/javascript" src="./emails-editor.js"></script>
 <head>
-<body style="background-color: rgb(218,230,255);">
+<body style="background-color: rgb(218,230,255);margin:50px 50px 50px 50px;">
 <div id="emails-editor"></div>
 <script type="text/javascript">
     const container = document.querySelector('#emails-editor');
